--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,13 +7,16 @@ authors = ["chenej <chenej@gzyitop.com>"]
 futures = "*"
 tokio-core = "*"
 tokio-io   = "*"
+tokio-service = "*"
 error-chain = "*"
 toml = "*"
 serde = "*"
 serde_derive = "*"
 uuid = {version = "*", features = ["v4", "v5"]}
 futures-cpupool = "*"
+bytes = "*"
 
 
 [lib]
 name = "tcp_proxy"
+
